--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@
     <footer>
       <span
         >Feito com ♥️ por
-        <a href="https:www.jhonatanoliveira.com/"> Jhonatan Oliveira</a>.</span
+        <a href="https://www.jhonatanoliveira.com/"> Jhonatan Oliveira</a
+        >.</span
       >
     </footer>
   </body>
